--- a/templates/base.html
+++ b/templates/base.html
@@ -35,6 +35,11 @@
 
     {% block content %}{% endblock content %}
 
+    <div class="container footer">
+      <hr>
+      <p class="footer-text">thermonitor is built by Corvia Technologies and is released as open-source software.</p>
+    </div>
+
     <script src="{% static 'vendor/jquery/dist/jquery.min.js' %}"></script>
     <script src="{% static 'vendor/bootstrap/dist/js/bootstrap.min.js' %}"></script>
   </body>
