text color styling

--- a/templates/frontpage.html
+++ b/templates/frontpage.html
@@ -67,32 +67,32 @@
 
         <div class="row">
             <div class="col-md-2 datetime">11/09/2015 <span class="mute">@</span> 09:22 AM</div>
-            <div class="col-md-8"><span class="bright">Basement Freezer is above 48°</span> an email has been sent to sarah@2894onmain.com</div>
+            <div class="col-md-8"><span class="bright">Basement Freezer is above 48°</span> <span class="mute">an email has been sent to</span> sarah@2894onmain.com</div>
             <div class="col-md-2 mute">12 hours 5 minutes ago</div>
         </div>
 
 
         <div class="row">
             <div class="col-md-2 datetime">11/09/2015 <span class="mute">@</span> 07:12 AM</div>
-            <div class="col-md-8"><span class="bright">Back Room Refridgerator is OFFLINE</span> an email has been sent to sarah@2894onmain.com</div>
+            <div class="col-md-8"><span class="bright">Back Room Refridgerator is OFFLINE</span> <span class="mute">an email has been sent to</span> sarah@2894onmain.com</div>
             <div class="col-md-2 mute">12 hours 5 minutes ago</div>
         </div>
 
         <div class="row">
             <div class="col-md-2 datetime">11/09/2015 <span class="mute">@</span> 04:20 AM</div>
-            <div class="col-md-8"><span class="bright">Cafe Refridgerator 3 is below 33°</span> an email has been sent to sarah@2894onmain.com</div>
+            <div class="col-md-8"><span class="bright">Cafe Refridgerator 3 is below 33°</span> <span class="mute">an email has been sent to</span> sarah@2894onmain.com</div>
             <div class="col-md-2 mute">12 hours 5 minutes ago</div>
         </div>
 
         <div class="row">
             <div class="col-md-2 datetime">11/09/2015 <span class="mute">@</span> 02:04 AM</div>
-            <div class="col-md-8"><span class="bright">Hoophouse Pen 1 Sensor is above 81°</span> an email has been sent to sarah@2894onmain.com</div>
+            <div class="col-md-8"><span class="bright">Hoophouse Pen 1 Sensor is above 81°</span> <span class="mute">an email has been sent to</span> sarah@2894onmain.com</div>
             <div class="col-md-2 mute">12 hours 5 minutes ago</div>
         </div>
 
         <div class="row">
             <div class="col-md-2 datetime">11/09/2015 <span class="mute">@</span> 12:00 AM</div>
-            <div class="col-md-8"><span class="bright">Cafe refridgerator 1 is above 52°</span> an email has been sent to sarah@2894onmain.com</div>
+            <div class="col-md-8"><span class="bright">Cafe refridgerator 1 is above 52°</span> <span class="mute">an email has been sent to</span> sarah@2894onmain.com</div>
             <div class="col-md-2 mute">12 hours 5 minutes ago</div>
         </div>
 
