--- a/notifications/apps/templates/email/email_template.html
+++ b/notifications/apps/templates/email/email_template.html
@@ -5,7 +5,7 @@
 {% for data in sensor_data %}
 <div style="font-family:monospace;padding:5px;border-bottom:1px solid #aeaeae;">
    <span style="color:#3e3e3e">{{ data.datetime|date:"n/j h:i A" }} - </span>
-   <span style="color:#{% if data.state %}0174DF{% else %}B40404{% endif %}">{{ data.value }}&deg;F</span>
+   <span style="color:#{% if data.state %}0174DF{% else %}B40404{% endif %}">{{ data.value }} &deg;F</span>
 </div>
 {% endfor %}
 <br>
@@ -22,7 +22,7 @@ and
 {% endif %}
 
 {% if sensor.max_value %}
-<strong>{{ sensor.max_value_operator }} {{ sensor.max_value }}&deg;C</strong>
+<strong>{{ sensor.max_value_operator }} {{ sensor.max_value }}&deg;F</strong>
 {% endif %}
 
 .</p>
