--- a/templates/base.html
+++ b/templates/base.html
@@ -21,26 +21,12 @@
 
   </head>
   <body>
-
-    <div class="container">
-      <header>
-        <span class="logo"></span>
-        <span class="current-datetime">
-          <span class="date">{% now "l, F jS" %}</span>
-          <span class="time">{% now "g:i A" %}</span>
-        </span>
-        <h1>Temperature Status</h1>
-      </header>
-    </div>
+    <div id="thermonitorApp"></div>
 
     {% block content %}{% endblock content %}
 
-    <div class="container footer">
-      <hr>
-      <p class="footer-text">thermonitor is built by Corvia Technologies and is released as open-source software.</p>
-    </div>
-
     <script src="{% static 'vendor/jquery/dist/jquery.min.js' %}"></script>
     <script src="{% static 'vendor/bootstrap/dist/js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/bundle.js' %}"></script>
   </body>
 </html>
