--- a/templates/frontpage.html
+++ b/templates/frontpage.html
@@ -1,101 +1,3 @@
 {% extends "base.html" %}
 
-{% block content %}
-
-    <div class="container">
-
-        <h2>Hoophouse</h2>
-        <hr>
-
-        <div class="row gauges">
-
-            <div class="col-md-2">
-                <div class="progress vertical">
-                  <div class="progress-bar progress-bar-info progress-bar-striped active" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 40%;"></div>
-                </div>
-                <span class="gauge-temp">59°</span>
-                <span class="gauge-label">gauge label</span>
-            </div>
-
-            <div class="col-md-2">
-                <div class="progress vertical">
-                    <div class="progress-bar progress-bar-info progress-bar-striped active" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div>
-                </div>
-                <span class="gauge-temp">59°</span>
-                <span class="gauge-label">gauge label</span>
-            </div>
-
-            <div class="col-md-2">
-                <div class="progress vertical">
-                  <div class="progress-bar progress-bar-info progress-bar-striped active" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
-                </div>
-                <span class="gauge-temp">59°</span>
-                <span class="gauge-label">gauge label</span>
-            </div>
-
-            <div class="col-md-2">
-                <div class="progress vertical">
-                    <div class="progress-bar progress-bar-danger progress-bar-striped active" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 95%;"></div>
-                </div>
-                <span class="gauge-temp">59°</span>
-                <span class="gauge-label">gauge label</span>
-            </div>
-
-            <div class="col-md-2">
-                <div class="progress vertical">
-                  <div class="progress-bar progress-bar-info progress-bar-striped active" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
-                </div>
-                <span class="gauge-temp">59°</span>
-                <span class="gauge-label">gauge label</span>
-            </div>
-
-            <div class="col-md-2">
-                <div class="progress vertical">
-                  <div class="progress-bar progress-bar-info progress-bar-striped active" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
-                </div>
-                <span class="gauge-temp">59°</span>
-                <span class="gauge-label">gauge label</span>
-            </div>
-
-        </div>
-    </div>
-
-    <div class="container notifications">
-
-        <h2>Notification Activity</h2>
-        <hr>
-
-        <div class="row">
-            <div class="col-md-2 datetime">11/09/2015 <span class="mute">@</span> 09:22 AM</div>
-            <div class="col-md-8"><span class="bright">Basement Freezer is above 48°</span> <span class="mute">an email has been sent to</span> sarah@2894onmain.com</div>
-            <div class="col-md-2 mute">12 hours 5 minutes ago</div>
-        </div>
-
-
-        <div class="row">
-            <div class="col-md-2 datetime">11/09/2015 <span class="mute">@</span> 07:12 AM</div>
-            <div class="col-md-8"><span class="bright">Back Room Refridgerator is OFFLINE</span> <span class="mute">an email has been sent to</span> sarah@2894onmain.com</div>
-            <div class="col-md-2 mute">12 hours 5 minutes ago</div>
-        </div>
-
-        <div class="row">
-            <div class="col-md-2 datetime">11/09/2015 <span class="mute">@</span> 04:20 AM</div>
-            <div class="col-md-8"><span class="bright">Cafe Refridgerator 3 is below 33°</span> <span class="mute">an email has been sent to</span> sarah@2894onmain.com</div>
-            <div class="col-md-2 mute">12 hours 5 minutes ago</div>
-        </div>
-
-        <div class="row">
-            <div class="col-md-2 datetime">11/09/2015 <span class="mute">@</span> 02:04 AM</div>
-            <div class="col-md-8"><span class="bright">Hoophouse Pen 1 Sensor is above 81°</span> <span class="mute">an email has been sent to</span> sarah@2894onmain.com</div>
-            <div class="col-md-2 mute">12 hours 5 minutes ago</div>
-        </div>
-
-        <div class="row">
-            <div class="col-md-2 datetime">11/09/2015 <span class="mute">@</span> 12:00 AM</div>
-            <div class="col-md-8"><span class="bright">Cafe refridgerator 1 is above 52°</span> <span class="mute">an email has been sent to</span> sarah@2894onmain.com</div>
-            <div class="col-md-2 mute">12 hours 5 minutes ago</div>
-        </div>
-
-    </div>
-
-{% endblock content %}
+{% block content %}{% endblock content %}
